--- a/war/css/bluecollar.css
+++ b/war/css/bluecollar.css
@@ -10,6 +10,15 @@ div.main-content {
 	display: none;
 }
 
+div#busy-indicator {
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
 .form-signin {
 	position: absolute;
 	top: 50%;
