--- a/war/css/bluecollar.css
+++ b/war/css/bluecollar.css
@@ -13,10 +13,10 @@ div.main-content {
 div#busy-indicator {
 	display: none;
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
+	width: 1px;
+	height: 1px;
+	top: 50%;
+	left: 50%;
 }
 
 .form-signin {
@@ -25,7 +25,7 @@ div#busy-indicator {
 	left: 50%;
 	max-width: 300px;
 	padding: 19px 29px 29px;
-	margin: -143px 0 0 -150px;
+	margin: -143px 0 0 -175px;
 	background-color: #fff;
 	border: 1px solid #e5e5e5;
 	-webkit-border-radius: 5px;
